--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/sam2lca.mb.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/sam2lca.mb.config
@@ -7,7 +7,7 @@ $;NCBITAX$; =
 ;Location of the gi_taxid_nucl.dmp file for nucleotides or gi_taxid_prot.dmp file for proteins
 $;GI2TAX$; =
 ;Host name of the mongo database
-$;HOST$; = 172.18.0.1:27017
+$;HOST$; = revan.igs.umaryland.edu:10001
 ;Name of the gi database in mongo
 $;TAXONDB$; = gi2taxon
 ;;Name of the gi collection in mongo.
