edited skipped workflow commands to omit BSML

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/ncbi-blastn.nt.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/ncbi-blastn.nt.config
@@ -42,6 +42,7 @@ $;PIPELINE_TOKEN$; = unnamed
 ;;
 ;;To only produce raw blast output add;
 $;SKIP_WF_COMMAND$;=convert raw to btab,create bsml list,convert btab to bsml,dtd validation,create btab list
+$;SKIP_WF_COMMAND$;=convert raw to btab,convert raw to bsml,store config params,dtd validation,create bsml list,create btab list
 
 
 ;The version,revision,tag here is set by an interpolated CVS tag
