--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/concatenate_files.blast.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/concatenate_files.blast.config
@@ -3,7 +3,7 @@ classification=utility
 
 [input]
 ;all files in input list will be concatenated into output file
-$;INPUT_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/blastn_plus/$;PIPELINEID$;_nt/blastn_plus.raw.list
+$;INPUT_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/blastn_plus/$;PIPELINEID$;_nt/blastn_plus.m8.list
 
 [output]
 $;OUTPUT_TOKEN$;=blast
