for some reason package-lgtseek code was in this repo

--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -5,21 +5,24 @@
 ; under [component wu-blastp] will only be evaluated when running the wu-blastp
 ; component.  Tokens under any 'common' section will be evaluated for all
 ; components ;; common stuff first
+
 [common shared]
-$;BWA_EXEC$;=/opt/packages/bwa/bwa
 $;SAMTOOLS_BIN$;=/opt/packages/samtools/bin
 $;SAMTOOLS_EXEC$;=/opt/packages/samtools/bin/samtools
+$;R_EXEC$;=/usr/bin/R
+$;PICARD_TOOLS$;=/usr/local/packages/picard-tools-2.7.1/picard.jar
 
-[common inputs]
-$;NCBI_BLAST_NT$; = nt
+[component bowtie]
+$;BOWTIE_EXEC$;=/usr/local/bin/bowtie/
+$;BOWTIE_BIN$;=/usr/local/bin/
 
-[component filter_dups_lc_seqs]
-$;PICARD_TOOLS$;=/opt/packages/picard/build/libs/picard.jar
-$;PRINSEQ_EXEC$;=/opt/packages/prinseq/prinseq-lite.pl
-$;JAVA_EXEC$;=/usr/bin/java
+[component bowtie_build]
+$;BOWTIE_BUILD_EXEC$;=/usr/local/bin/bowtie-build
+$;BOWTIE_BUILD_BIN$;=/usr/local/bin
 
-[component blastn_plus]
-$;BLASTPLUS_BIN$;=/usr/bin
+[component split_spliced_reads]
+$;GATK_BIN$;= /usr/local/packages/gatk-3.7/
+$;JAVA_EXEC$;=/usr/local/packages/java-jre-1.8.0/bin/java
 
-[component sra2fastq]
-$;SRA_TOOLS_BIN$;=/opt/packages/sra-tools/
+[component tophat]
+$;TOPHAT_EXEC$;=/usr/local/bin/tophat
