committing pipeline_template configs

--- a/package-nicu/pipeline_templates/DNASeq_SNP_Pipeline/base_recalibration.base_recal.config
+++ b/package-nicu/pipeline_templates/DNASeq_SNP_Pipeline/base_recalibration.base_recal.config
@@ -8,37 +8,37 @@ $;TEMP_DIR$; = $;TMP_DIR$;
 $;OTHER_ARGS$; = --v
 
 [input]
-;; path to realigner_target_creator config file
+;; path to base_recalibration config file
 $;INPUT_FILE$; = 
-;; path to list of realigner_target_creator config files
+;; path to list of base_recalibration config files
 $;INPUT_FILE_LIST$; = 
-;; path to directory of multiple realigner_target_creator  config file
+;; path to directory of multiple base_recalibration  config file
 $;INPUT_DIRECTORY$; = 
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; = config
 
 [output]
 ;; use a unique sample name
-$;OUTPUT_TOKEN$; = default
+$;OUTPUT_TOKEN$; = base_recal
 ;; output directory for component results
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-;; list of realigner_target_creator config files
+;; list of base_recalibration config files
 $;OUTPUT_CONFIG$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.configs.list
 
 [dce]
 ;; These configuration options only apply to any distributed components 
 $;GROUP$;=
 $;OS$;=
-$;MEMORY$;=16000
+$;MEMORY$;=50000
 $;HOSTS$;=
 $;QUEUE$;=threaded.q
 $;DURATION$;=
 $;PRIORITY$;=
-$;PASSTHROUGH$;=
+$;PASSTHROUGH$;=-pe thread 20
 
 [component]
-$;COMPONENT_NAME$; = realigner_target_creator
-$;DESCRIPTION$; =  Run GATK's Realigner_target_creator
+$;COMPONENT_NAME$; = base_recalibration
+$;DESCRIPTION$; =  Run GATK's Base Recalibrator
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
