--- a/package-nicu/pipeline_templates/DNASeq_SNP_Pipeline/extract_chromosomes.map.config
+++ b/package-nicu/pipeline_templates/DNASeq_SNP_Pipeline/extract_chromosomes.map.config
@@ -2,27 +2,24 @@
 classification = SNP
 
 [parameters]
-;; path to temporary directory
-$;TEMP_DIR$; = $;TMP_DIR$;
-;; use --v for verbose summary
-$;OTHER_ARGS$; = --v
+$;OTHER_ARGS$; =
 
 [input]
-;; path to realigner_target_creator config file
+;; path to config file
 $;INPUT_FILE$; = 
-;; path to list of realigner_target_creator config files
+;; path to list of config files
 $;INPUT_FILE_LIST$; = 
-;; path to directory of multiple realigner_target_creator  config file
+;; path to directory of multiple config files
 $;INPUT_DIRECTORY$; = 
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; = config
 
 [output]
 ;; use a unique sample name
-$;OUTPUT_TOKEN$; = default
+$;OUTPUT_TOKEN$; = map
 ;; output directory for component results
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-;; list of realigner_target_creator config files
+;; list of print_reads config files
 $;OUTPUT_CONFIG$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.configs.list
 
 [dce]
@@ -31,14 +28,14 @@ $;GROUP$;=
 $;OS$;=
 $;MEMORY$;=16000
 $;HOSTS$;=
-$;QUEUE$;=threaded.q
+$;QUEUE$;=
 $;DURATION$;=
 $;PRIORITY$;=
 $;PASSTHROUGH$;=
 
 [component]
-$;COMPONENT_NAME$; = realigner_target_creator
-$;DESCRIPTION$; =  Run GATK's Realigner_target_creator
+$;COMPONENT_NAME$; = extract_chromosomes
+$;DESCRIPTION$; =  Use SAMtools to filter only reads from chromosomal regions
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
