--- a/package-nicu/pipeline_templates/DNASeq_SNP_Pipeline/indel_realigner.indel_realign.config
+++ b/package-nicu/pipeline_templates/DNASeq_SNP_Pipeline/indel_realigner.indel_realign.config
@@ -8,37 +8,37 @@ $;TEMP_DIR$; = $;TMP_DIR$;
 $;OTHER_ARGS$; = --v
 
 [input]
-;; path to realigner_target_creator config file
+;; path to indel_realigner config file
 $;INPUT_FILE$; = 
-;; path to list of realigner_target_creator config files
+;; path to list of indel_realigner config files
 $;INPUT_FILE_LIST$; = 
-;; path to directory of multiple realigner_target_creator  config file
+;; path to directory of multiple indel_realigner  config file
 $;INPUT_DIRECTORY$; = 
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; = config
 
 [output]
 ;; use a unique sample name
-$;OUTPUT_TOKEN$; = default
+$;OUTPUT_TOKEN$; = indel_realign
 ;; output directory for component results
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-;; list of realigner_target_creator config files
+;; list of indel_realigner config files
 $;OUTPUT_CONFIG$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.configs.list
 
 [dce]
 ;; These configuration options only apply to any distributed components 
 $;GROUP$;=
 $;OS$;=
-$;MEMORY$;=16000
-$;HOSTS$;=
-$;QUEUE$;=threaded.q
+$;MEMORY$;=4000
+$;HOSTS$;=bellatrix
+$;QUEUE$;=test.q
 $;DURATION$;=
 $;PRIORITY$;=
 $;PASSTHROUGH$;=
 
 [component]
-$;COMPONENT_NAME$; = realigner_target_creator
-$;DESCRIPTION$; =  Run GATK's Realigner_target_creator
+$;COMPONENT_NAME$; = indel_realigner
+$;DESCRIPTION$; =  Run GATK's Indel Realigner
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
