--- a/package-nicu/pipeline_templates/DNASeq_SNP_Pipeline/print_reads.printreads.config
+++ b/package-nicu/pipeline_templates/DNASeq_SNP_Pipeline/print_reads.printreads.config
@@ -8,21 +8,21 @@ $;TEMP_DIR$; = $;TMP_DIR$;
 $;OTHER_ARGS$; = --v
 
 [input]
-;; path to realigner_target_creator config file
+;; path to print_reads config file
 $;INPUT_FILE$; = 
-;; path to list of realigner_target_creator config files
+;; path to list of print_reads config files
 $;INPUT_FILE_LIST$; = 
-;; path to directory of multiple realigner_target_creator  config file
+;; path to directory of multiple print_reads  config file
 $;INPUT_DIRECTORY$; = 
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; = config
 
 [output]
 ;; use a unique sample name
-$;OUTPUT_TOKEN$; = default
+$;OUTPUT_TOKEN$; = printreads
 ;; output directory for component results
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-;; list of realigner_target_creator config files
+;; list of print_reads config files
 $;OUTPUT_CONFIG$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.configs.list
 
 [dce]
@@ -31,14 +31,14 @@ $;GROUP$;=
 $;OS$;=
 $;MEMORY$;=16000
 $;HOSTS$;=
-$;QUEUE$;=threaded.q
+$;QUEUE$;=
 $;DURATION$;=
 $;PRIORITY$;=
 $;PASSTHROUGH$;=
 
 [component]
-$;COMPONENT_NAME$; = realigner_target_creator
-$;DESCRIPTION$; =  Run GATK's Realigner_target_creator
+$;COMPONENT_NAME$; = print_reads
+$;DESCRIPTION$; =  Run GATK's Print Reads
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
