--- a/package-nicu/pipeline_templates/DNASeq_SNP_Pipeline/realigner_target_creator.realign.config
+++ b/package-nicu/pipeline_templates/DNASeq_SNP_Pipeline/realigner_target_creator.realign.config
@@ -19,7 +19,7 @@ $;INPUT_EXTENSION$; = config
 
 [output]
 ;; use a unique sample name
-$;OUTPUT_TOKEN$; = default
+$;OUTPUT_TOKEN$; = realign
 ;; output directory for component results
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 ;; list of realigner_target_creator config files
