--- a/package-arbor/pipeline_templates/DNASeq_SNP_Pipeline/pipeline.config
+++ b/package-arbor/pipeline_templates/DNASeq_SNP_Pipeline/pipeline.config
@@ -1,5 +1,115 @@
 [global]
 
+[extract_chromosomes]
+;;Input BAM file
+$;INPUT_FILE$; = 
+;; Output Prefix
+$;Prefix$; = 
+
+[haplotype_caller]
+;;Input BAM file
+$;INPUT_FILE$; = 
+;; Reference File
+$;REFERENCE_FILE$; = 
+;; Max number of reads stored in memory
+$;MAX_READS_STORED$; = 
+;; Standard minimum confidence threshold for calling
+$;STAND_CALL_CONF$; = 
+;; Don't use soft-clipped bases
+$;NO_SOFT_CLIPPED_BASES$; = 
+;; Output Prefix
+$;Prefix$; = 
+
+[picard_processing]
+;;Input BAM file
+$;INPUT_FILE$; = 
+;; Read Group ID
+$;ID$; = 
+;; Read Group Library
+$;LIBRARY$; = 
+;; Read Group Platform
+$;PLATFORM$; = 
+;; Read Group Platform Unit
+$;PLATFORM_UNIT$; = 
+;; Read Group Sample Name
+$;SAMPLE_NAME$; = 
+;; Max number of reads stored in memory
+$;MAX_READS_STORED$; = 
+;; Validation Stringency - Choose from SILENT, LENIENT, or STRICT
+$;VALIDATION_STRINGENCY$; = 
+;; Output Prefix
+$;Prefix$; = 
+
+[preprocess_alignment]
+;;Input BAM file
+$;INPUT_FILE$; = 
+;;Reference 
+$;REFERENCE$; = 
+;; Max number of reads stored in memory
+$;MAX_READS_STORED$; = 
+;; Validation Stringency - Choose from SILENT, LENIENT, or STRICT
+$;VALIDATION_STRINGENCY$; = 
+;; Output Prefix
+$;Prefix$; = 
+
+[annovar]
+;;Input BAM file
+$;INPUT_FILE$; =
+;; Path to database
+$;DB_PATH$; =
+;; Protocol
+$;PROTOCOL$; = 
+;; Build Version
+$;BUILDVER$; = 
+;; Operation
+$;OPERATION$; =
+;; NA String
+$;NASTRING$; =
+;; Remove temp files
+$;REMOVE$; = 1
+;; Specify this is VCF-formatted input
+$;VCFINPUT$; = 1
+;; String of other misc arguments to pass to table_annovar.pl
+$;OTHER_ARGS$; = 
+;; Output Prefix
+$;Prefix$; = 
+
+[split_spliced_reads]
+;;Input BAM file
+$;INPUT_FILE$; = 
+;;Reference 
+$;REFERENCE$; = 
+;; Max number of reads stored in memory
+$;MAX_READS_STORED$; = 
+;; Original Mapping Quality (-RMQF option for ReassignOneMappingQuality filter)
+$;ORIG_MAPPING_QUALITY$; = 
+;; Desired Mapping Quality (-RMQT option for ReassignOneMappingQuality filter)
+$;DESIRED_MAPPING_QUALITY$; =
+;; String of unsafe operations
+$;UNSAFE$; = ALLOW_N_CIGAR_READS
+;; String of other misc opts to pass into GATK
+$;OTHER_OPTS$; = 
+;; Output Prefix
+$;Prefix$; = 
+
+[variant_filtration]
+;;Input BAM file
+$;INPUT_FILE$; = 
+;;Reference 
+$;REFERENCE$; = 
+;; Max number of reads stored in memory
+$;MAX_READS_STORED$; = 
+;; Cluster Window Size
+$;WINDOW_SIZE$; = 
+;; Cluster Size
+$;CLUSTER_SIZE$; = 
+;; Standard minimum confidence threshold for calling
+$;STAND_CALL_CONF$; = 
+;; String of other misc opts to pass into GATK
+$;OTHER_OPTS$; = 
+;; Output Prefix
+$;Prefix$; = 
+
 [realigner_target_creator]
 ;;Path to GATK binary directory
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1
