replacing algorithm param with blast type

--- a/package-arbor/pipeline_templates/DNASeq_SNP_Pipeline/pipeline.config
+++ b/package-arbor/pipeline_templates/DNASeq_SNP_Pipeline/pipeline.config
@@ -1,181 +1,124 @@
-[global]
-
-[extract_chromosomes]
-;;Input BAM file
+[speedseq_aln alignment]
+;; path to  config file
 $;INPUT_FILE$; = 
-;; Output Prefix
-$;Prefix$; = 
-
-[haplotype_caller]
-;;Input BAM file
-$;INPUT_FILE$; = 
-;; Reference File
-$;REFERENCE_FILE$; = 
-;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = 
-;; Standard minimum confidence threshold for calling
-$;STAND_CALL_CONF$; = 
-;; Don't use soft-clipped bases
-$;NO_SOFT_CLIPPED_BASES$; = 
-;; Output Prefix
-$;Prefix$; = 
-
-[picard_processing]
-;;Input BAM file
-$;INPUT_FILE$; = 
-;; Read Group ID
-$;ID$; = 
-;; Read Group Library
-$;LIBRARY$; = 
-;; Read Group Platform
-$;PLATFORM$; = 
-;; Read Group Platform Unit
-$;PLATFORM_UNIT$; = 
-;; Read Group Sample Name
-$;SAMPLE_NAME$; = 
-;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = 
-;; Validation Stringency - Choose from SILENT, LENIENT, or STRICT
-$;VALIDATION_STRINGENCY$; = 
-;; Output Prefix
-$;Prefix$; = 
-
-[preprocess_alignment]
-;;Input BAM file
-$;INPUT_FILE$; = 
-;;Reference 
-$;REFERENCE$; = 
-;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = 
-;; Validation Stringency - Choose from SILENT, LENIENT, or STRICT
-$;VALIDATION_STRINGENCY$; = 
-;; Output Prefix
-$;Prefix$; = 
-
-[annovar]
-;;Input BAM file
-$;INPUT_FILE$; =
-;; Path to database
-$;DB_PATH$; =
-;; Protocol
-$;PROTOCOL$; = 
-;; Build Version
-$;BUILDVER$; = 
-;; Operation
-$;OPERATION$; =
-;; NA String
-$;NASTRING$; =
-;; Remove temp files
-$;REMOVE$; = 1
-;; Specify this is VCF-formatted input
-$;VCFINPUT$; = 1
-;; String of other misc arguments to pass to table_annovar.pl
-$;OTHER_ARGS$; = 
-;; Output Prefix
-$;Prefix$; = 
-
-[split_spliced_reads]
-;;Input BAM file
-$;INPUT_FILE$; = 
-;;Reference 
-$;REFERENCE$; = 
-;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = 
-;; Original Mapping Quality (-RMQF option for ReassignOneMappingQuality filter)
-$;ORIG_MAPPING_QUALITY$; = 
-;; Desired Mapping Quality (-RMQT option for ReassignOneMappingQuality filter)
-$;DESIRED_MAPPING_QUALITY$; =
-;; String of unsafe operations
-$;UNSAFE$; = ALLOW_N_CIGAR_READS
-;; String of other misc opts to pass into GATK
-$;OTHER_OPTS$; = 
-;; Output Prefix
-$;Prefix$; = 
-
-[variant_filtration]
-;;Input BAM file
-$;INPUT_FILE$; = 
-;;Reference 
-$;REFERENCE$; = 
-;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = 
-;; Cluster Window Size
-$;WINDOW_SIZE$; = 
-;; Cluster Size
-$;CLUSTER_SIZE$; = 
-;; Standard minimum confidence threshold for calling
-$;STAND_CALL_CONF$; = 
-;; String of other misc opts to pass into GATK
-$;OTHER_OPTS$; = 
-;; Output Prefix
-$;Prefix$; = 
-
-[realigner_target_creator]
-;;Path to GATK binary directory
-$;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1
-;;Reference 
-$;Reference$; = 
-;;Input Bam file
-$;Infile$; = 
-;;Output Prefix
-$;Prefix$; = 
-;;additional Realigner Target Creator parameters
-$;OTHER_PARAMETERS$; = 
-;;use --v for verbose summary
+;; path to list of  config files
+$;INPUT_FILE_LIST$; = 
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
 $;OTHER_ARGS$; = --v
-;;Java Memory
-$;Java_Memory$; = -Xmx5g
 
-[indel_realigner]
-;;Path to GATK binary directory
-$;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
-;;Reference 
-$;Reference$; = 
-;;Input Bam file
-$;Infile$; = 
-;;Target Intervals from Realigner target creator
-$;TargetInterval$; = 
-;;Output Prefix
-$;Prefix$; = 
-;;additional Indel Realigner parameters
-$;OTHER_PARAMETERS$; = 
-;;use --v for verbose summary
+
+[split_bam split_align]
+;; path to config file
+$;INPUT_FILE$; =  
+;; path to list of  config files
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/speedseq_aln/$;PIPELINEID$;_alignment/speedseq_aln.configs.list 
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
 $;OTHER_ARGS$; = --v
-;;Java Memory
-$;Java_Memory$; = -Xmx5g
 
-[base_recalibration]
-;;Path to GATK binary directory
-$;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
-;;Reference 
-$;Reference$; = 
-;;Input Bam file
-$;Infile$; = 
-;;Output Prefix
-$;Prefix$; = 
-;;Known sites
-$;KnownSites$; = 
-;;additional Base Recalibration parameters
-$;OTHER_PARAMETERS$; = -nct 40
-;;use --v for verbose summary
-$;OTHER_ARGS$; = --v
-;;Java Memory
-$;Java_Memory$; = -Xms8g
-
-[print_reads]
-;;Path to GATK binary directory
-$;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
-;;Reference 
-$;Reference$; = 
-;;Input Bam file
+[realigner_target_creator realign]
+;; path to config file
 $;INPUT_FILE$; = 
-;;Output Prefix
-$;Prefix$; = 
-;;additional Print Reads parameters
-;;Base Recalibration table file
-$;BQSR$; =
-$;OTHER_PARAMETERS$; = 
-;;use --v for verbose summary
+;; path to list of  config files
+$;INPUT_FILE_LIST$; =  $;REPOSITORY_ROOT$;/output_repository/split_bam/$;PIPELINEID$;_split_align/split_bam.configs.list
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
 $;OTHER_ARGS$; = --v
-;;Java Memory
-$;Java_Memory$; = -Xmx10g
+
+[indel_realigner indel_realign]
+;; path to  config file
+$;INPUT_FILE$; = 
+;; path to list of  config files
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/realigner_target_creator/$;PIPELINEID$;_realign/realigner_target_creator.configs.list
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
+$;OTHER_ARGS$; = --v
+
+[fix_mate fixed_mate]
+;; path to speedseq config file
+$;INPUT_FILE$; = 
+;; path to list of  config files
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/indel_realigner/$;PIPELINEID$;_indel_realign/indel_realigner.configs.list
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
+$;OTHER_ARGS$; = --v
+
+[merge_bam merged]
+;; path to speedseq config file
+$;INPUT_FILE$; = $;REPOSITORY_ROOT$;/output_repository/fix_mate/$;PIPELINEID$;_fixed_mate/fix_mate.configs.list
+;; path to list of  config files
+$;INPUT_FILE_LIST$; = 
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
+$;OTHER_ARGS$; = --v
+
+[base_recalibration base_recal]
+;; path to  config file
+$;INPUT_FILE$; = $;REPOSITORY_ROOT$;/output_repository/merge_bam/$;PIPELINEID$;_merged/merge_bam.configs.list
+;; path to list of  config files
+$;INPUT_FILE_LIST$; = 
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
+$;OTHER_ARGS$; = --v
+
+
+[print_reads printreads]
+;; path to  config file
+$;INPUT_FILE$; = 
+;; path to list of  config files
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/base_recalibration/$;PIPELINEID$;_base_recal/base_recalibration.configs.list
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
+$;OTHER_ARGS$; = --v
+
+[unified_genotyper snp]
+;; path to config file
+$;INPUT_FILE$; = 
+;; path to list of config files
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/print_reads/$;PIPELINEID$;_printreads/print_reads.configs.list
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
+$;OTHER_ARGS$; = --v
+
+[run_convert2annovar convert]
+;; path to config file
+$;INPUT_FILE$; = 
+;; path to list of config files
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/unified_genotyper/$;PIPELINEID$;_snp/unified_genotyper.configs.list
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
+$;OTHER_ARGS$; = --v
+
+[run_table_annovar table]
+;; path to  config file
+$;INPUT_FILE$; = 
+;; path to list of config files
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/run_convert2annovar/$;PIPELINEID$;_convert/run_convert2annovar.configs.list
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
+$;OTHER_ARGS$; = --v
+
+
+[run_cascade cascade]
+;; path to  config file
+$;INPUT_FILE$; = 
+;; path to list of config files
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/run_table_annovar/$;PIPELINEID$;_table/run_table_annovar.configs.list
+;; path to temporary directory
+$;TEMP_DIR$; = $;TMP_DIR$;
+;; use --v for verbose summary
+$;OTHER_ARGS$; = --v
+
+
