finishing pipeline.config file

--- a/package-arbor/pipeline_templates/DNASeq_SNP_Pipeline/pipeline.config
+++ b/package-arbor/pipeline_templates/DNASeq_SNP_Pipeline/pipeline.config
@@ -1,29 +1,32 @@
-[speedseq_aln alignment]
-;; path to  config file
-$;INPUT_FILE$; = 
-;; path to list of  config files
-$;INPUT_FILE_LIST$; = 
-;; path to temporary directory
-$;TEMP_DIR$; = $;TMP_DIR$;
-;; use --v for verbose summary
-$;OTHER_ARGS$; = --v
-
-
-[split_bam split_align]
+[extract_chromosomes map]
 ;; path to config file
-$;INPUT_FILE$; =  
-;; path to list of  config files
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/speedseq_aln/$;PIPELINEID$;_alignment/speedseq_aln.configs.list 
-;; path to temporary directory
-$;TEMP_DIR$; = $;TMP_DIR$;
-;; use --v for verbose summary
-$;OTHER_ARGS$; = --v
+$;INPUT_FILE$; =
+;; path to list of config files
+$;INPUT_FILE_LIST$; =
+
+[preprocess_alignment preprocess]
+;; path to config file
+$;INPUT_FILE$; =
+;; path to list of config files
+$;INPUT_FILE_LIST$; =  $;REPOSITORY_ROOT$;/output_repository/extract_chromosomes/$;PIPELINEID$;_map/extract_chromosomes.configs.list
+
+[picard_processing process]
+;; path to config file
+$;INPUT_FILE$; =
+;; path to list of config files
+$;INPUT_FILE_LIST$; =  $;REPOSITORY_ROOT$;/output_repository/preprocess_alignments/$;PIPELINEID$;_preprocess/preprocess_alignments.configs.list
+
+[split_spliced_reads split]
+;; path to config file
+$;INPUT_FILE$; =
+;; path to list of config files
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/picard_processing/$;PIPELINEID$;_process/picard_processing.configs.list
 
 [realigner_target_creator realign]
 ;; path to config file
 $;INPUT_FILE$; = 
 ;; path to list of  config files
-$;INPUT_FILE_LIST$; =  $;REPOSITORY_ROOT$;/output_repository/split_bam/$;PIPELINEID$;_split_align/split_bam.configs.list
+$;INPUT_FILE_LIST$; =  $;REPOSITORY_ROOT$;/output_repository/split_spliced_reads/$;PIPELINEID$;_split/split_spliced_reads.configs.list
 ;; path to temporary directory
 $;TEMP_DIR$; = $;TMP_DIR$;
 ;; use --v for verbose summary
@@ -39,36 +42,15 @@ $;TEMP_DIR$; = $;TMP_DIR$;
 ;; use --v for verbose summary
 $;OTHER_ARGS$; = --v
 
-[fix_mate fixed_mate]
-;; path to speedseq config file
-$;INPUT_FILE$; = 
-;; path to list of  config files
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/indel_realigner/$;PIPELINEID$;_indel_realign/indel_realigner.configs.list
-;; path to temporary directory
-$;TEMP_DIR$; = $;TMP_DIR$;
-;; use --v for verbose summary
-$;OTHER_ARGS$; = --v
-
-[merge_bam merged]
-;; path to speedseq config file
-$;INPUT_FILE$; = $;REPOSITORY_ROOT$;/output_repository/fix_mate/$;PIPELINEID$;_fixed_mate/fix_mate.configs.list
-;; path to list of  config files
-$;INPUT_FILE_LIST$; = 
-;; path to temporary directory
-$;TEMP_DIR$; = $;TMP_DIR$;
-;; use --v for verbose summary
-$;OTHER_ARGS$; = --v
-
 [base_recalibration base_recal]
 ;; path to  config file
-$;INPUT_FILE$; = $;REPOSITORY_ROOT$;/output_repository/merge_bam/$;PIPELINEID$;_merged/merge_bam.configs.list
+$;INPUT_FILE$; = $;REPOSITORY_ROOT$;/output_repository/indel_realigner/$;PIPELINEID$;_indel_realign/indel_realigner.configs.list
 ;; path to list of  config files
 $;INPUT_FILE_LIST$; = 
 ;; path to temporary directory
 $;TEMP_DIR$; = $;TMP_DIR$;
 ;; use --v for verbose summary
 $;OTHER_ARGS$; = --v
-
 
 [print_reads printreads]
 ;; path to  config file
@@ -80,45 +62,21 @@ $;TEMP_DIR$; = $;TMP_DIR$;
 ;; use --v for verbose summary
 $;OTHER_ARGS$; = --v
 
-[unified_genotyper snp]
-;; path to config file
+[haplotype_caller caller]
+;; path to  config file
 $;INPUT_FILE$; = 
 ;; path to list of config files
 $;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/print_reads/$;PIPELINEID$;_printreads/print_reads.configs.list
-;; path to temporary directory
-$;TEMP_DIR$; = $;TMP_DIR$;
-;; use --v for verbose summary
-$;OTHER_ARGS$; = --v
 
-[run_convert2annovar convert]
-;; path to config file
-$;INPUT_FILE$; = 
-;; path to list of config files
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/unified_genotyper/$;PIPELINEID$;_snp/unified_genotyper.configs.list
-;; path to temporary directory
-$;TEMP_DIR$; = $;TMP_DIR$;
-;; use --v for verbose summary
-$;OTHER_ARGS$; = --v
-
-[run_table_annovar table]
+[variant_filtration filter]
 ;; path to  config file
 $;INPUT_FILE$; = 
 ;; path to list of config files
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/run_convert2annovar/$;PIPELINEID$;_convert/run_convert2annovar.configs.list
-;; path to temporary directory
-$;TEMP_DIR$; = $;TMP_DIR$;
-;; use --v for verbose summary
-$;OTHER_ARGS$; = --v
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/haplotype_caller/$;PIPELINEID$;_caller/haplotype_caller.configs.list
 
-
-[run_cascade cascade]
+[annovar annotate]
 ;; path to  config file
 $;INPUT_FILE$; = 
 ;; path to list of config files
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/run_table_annovar/$;PIPELINEID$;_table/run_table_annovar.configs.list
-;; path to temporary directory
-$;TEMP_DIR$; = $;TMP_DIR$;
-;; use --v for verbose summary
-$;OTHER_ARGS$; = --v
-
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/variant_filtration/$;PIPELINEID$;_filter/variant_filtration.configs.list
 
