made a few shortcuts for config params

--- a/package-arbor/pipeline_templates/DNASeq_SNP_Pipeline/input.config
+++ b/package-arbor/pipeline_templates/DNASeq_SNP_Pipeline/input.config
@@ -1,4 +1,10 @@
 [global]
+;; Reference File
+$;REF_FILE$; = 
+;; Maximum number of reads stored in memory
+$;MAX_READS$; =
+;; Validation Stringency
+$;STRINGENCY$; =
 
 [extract_chromosomes]
 ;;Input BAM file
@@ -10,9 +16,9 @@ $;Prefix$; =
 ;;Input BAM file
 $;INPUT_FILE$; = 
 ;; Reference File
-$;REFERENCE_FILE$; = 
+$;REFERENCE_FILE$; = $;REF_FILE$; 
 ;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = 
+$;MAX_READS_STORED$; = $;MAX_READS$;
 ;; Standard minimum confidence threshold for calling
 $;STAND_CALL_CONF$; = 
 ;; Don't use soft-clipped bases
@@ -34,9 +40,9 @@ $;PLATFORM_UNIT$; =
 ;; Read Group Sample Name
 $;SAMPLE_NAME$; = 
 ;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = 
+$;MAX_READS_STORED$; = $;MAX_READS$;
 ;; Validation Stringency - Choose from SILENT, LENIENT, or STRICT
-$;VALIDATION_STRINGENCY$; = 
+$;VALIDATION_STRINGENCY$; = $;STRINGENCY$;
 ;; Output Prefix
 $;Prefix$; = 
 
@@ -44,11 +50,11 @@ $;Prefix$; =
 ;;Input BAM file
 $;INPUT_FILE$; = 
 ;;Reference 
-$;REFERENCE$; = 
+$;REFERENCE$; = $;REF_FILE$;
 ;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = 
+$;MAX_READS_STORED$; = $;MAX_READS$;
 ;; Validation Stringency - Choose from SILENT, LENIENT, or STRICT
-$;VALIDATION_STRINGENCY$; = 
+$;VALIDATION_STRINGENCY$; = $;STRINGENCY$;
 ;; Output Prefix
 $;Prefix$; = 
 
@@ -78,7 +84,7 @@ $;Prefix$; =
 ;;Input BAM file
 $;INPUT_FILE$; = 
 ;;Reference 
-$;REFERENCE$; = 
+$;REFERENCE$; = $;REF_FILE$;
 ;; Max number of reads stored in memory
 $;MAX_READS_STORED$; = 
 ;; Original Mapping Quality (-RMQF option for ReassignOneMappingQuality filter)
@@ -98,7 +104,7 @@ $;INPUT_FILE$; =
 ;;Reference 
 $;REFERENCE$; = 
 ;; Max number of reads stored in memory
-$;MAX_READS_STORED$; = 
+$;MAX_READS_STORED$; = $;MAX_READS$;
 ;; Cluster Window Size
 $;WINDOW_SIZE$; = 
 ;; Cluster Size
@@ -114,7 +120,7 @@ $;Prefix$; =
 ;;Path to GATK binary directory
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1
 ;;Reference 
-$;Reference$; = 
+$;Reference$; = $;REF_FILE$;
 ;;Input Bam file
 $;Infile$; = 
 ;;Output Prefix
@@ -130,7 +136,7 @@ $;Java_Memory$; = -Xmx5g
 ;;Path to GATK binary directory
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
 ;;Reference 
-$;Reference$; = 
+$;Reference$; = $;REF_FILE$;
 ;;Input Bam file
 $;Infile$; = 
 ;;Target Intervals from Realigner target creator
@@ -148,7 +154,7 @@ $;Java_Memory$; = -Xmx5g
 ;;Path to GATK binary directory
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
 ;;Reference 
-$;Reference$; = 
+$;Reference$; = $;REF_FILE$;
 ;;Input Bam file
 $;Infile$; = 
 ;;Output Prefix
@@ -166,7 +172,7 @@ $;Java_Memory$; = -Xms8g
 ;;Path to GATK binary directory
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
 ;;Reference 
-$;Reference$; = 
+$;Reference$; = $;REF_FILE$;
 ;;Input Bam file
 $;INPUT_FILE$; = 
 ;;Output Prefix
