added all softwares to software.config

--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -11,6 +11,22 @@ $;SAMTOOLS_BIN$;=/opt/packages/samtools/bin
 $;SAMTOOLS_EXEC$;=/opt/packages/samtools/bin/samtools
 $;R_EXEC$;=/usr/bin/R
 
+[component align_bowtie_stats]
+
+[component align_hisat2_stats]
+
+[component align_hisat2_split_stats]
+
+[component align_tophat_stats]
+
+[component align_tophat_split_stats]
+
+[component bam2bigwig]
+$;UCSC_UTIL$; = /usr/local/packages/ucsc_utils
+$;BEDTOOLS_BIN$; = /usr/local/bin
+
+[component bam_merge]
+
 [component bowtie]
 $;BOWTIE_EXEC$;=/usr/local/bin/bowtie/
 $;BOWTIE_BIN$;=/usr/local/bin/
@@ -19,5 +35,94 @@ $;BOWTIE_BIN$;=/usr/local/bin/
 $;BOWTIE_BUILD_EXEC$;=/usr/local/bin/bowtie-build
 $;BOWTIE_BUILD_BIN$;=/usr/local/bin
 
+[component create_cuffsuite_files]
+
+[component create_paired_list_file]
+
+[component cuffcompare]
+$;CUFFCOMPARE_EXEC$;=/usr/local/bin/cuffcompare
+$;CUFFCOMPARE_BIN$;=/usr/local/bin
+
+[component cuffdiff]
+$;CUFFDIFF_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffdiff
+$;CUFFDIFF_BIN$;=/usr/local/packages/cufflinks-2.2.1/bin
+
+[component cuffdiff_filter]
+
+[component cufflinks]
+$;CUFFLINKS_EXEC$;=/usr/local/bin/cufflinks
+$;CUFFLINKS_BIN$;=/usr/local/bin
+
+[component cuffmerge]
+$;CUFFMERGE_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffmerge
+$;CUFFMERGE_BIN$;=//usr/local/packages/cufflinks-2.2.1/bin
+
+[component cuffnorm]
+$;CUFFNORM_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffnorm
+$;CUFFNORM_BIN$;=/usr/local/packages/cufflinks-2.2.1/bin
+
+[component cuffquant]
+$;CUFFQUANT_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffquant
+$;CUFFQUANT_BIN$;=/usr/local/packages/cufflinks-2.2.1/bin
+
+[component cummerbund]
+$;R_BIN$;=/usr/local/packages/R-2.15.2/bin
+$;R_SCRIPT_PATH$;=
+
+[component deseq]
+$;R_BIN$;=/usr/local/packages/R-2.15.2/bin
+$;R_SCRIPT_PATH$;=
+
+[component edgeR]
+$;R_BIN$;=/usr/local/packages/R-2.14.1/bin
+$;R_SCRIPT_PATH$;=
+
+[component expression_plots]
+$;R_BIN$;=/usr/local/packages/R-2.15.2/bin
+$;R_SCRIPT_PATH$;=
+
+[component fastqc_stats]
+$;FASTQC_BIN$;=/usr/local/bin
+
+[component fastx_quality_stats]
+$;FASTX_EXEC$;=/usr/local/bin/fastx_quality_stats
+$;FASTX_BIN$;=/usr/local/bin
+
+[component fastx_trimming]
+$;FASTX_EXEC$;=/usr/local/bin/fastx_trimmer
+$;FASTX_BIN$;=/usr/local/bin
+
+[component filter_deseq]
+
+[component filter_edgeR]
+
+[component hisat2]
+$;HISAT2_BIN$;=/usr/local/packages/hisat2-2.0.4
+
+[component hisat2_build]
+$;HISAT2_BUILD_BIN$;=/usr/local/packages/hisat2-2.0.4
+
+[component htseq]
+$;PYTHON_BIN$;=
+$;PYTHON_LIB$;=
+
+[component percent_mapped_stats]
+$;BEDTOOLS_BIN$;=/usr/local/bin
+
+[component rpkm_coverage_stats]
+$;BEDTOOLS_BIN$;=/usr/local/bin
+
+[component samtools_alignment_stats]
+
+[component samtools_file_convert]
+
+[component samtools_reference_index]
+
+[component split_fastq]
+
 [component tophat]
 $;TOPHAT_EXEC$;=/usr/local/bin/tophat
+
+[component tophat_split]
+
+[component wrapper_align]
