--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -7,94 +7,72 @@
 ; components ;; common stuff first
 
 [common shared]
-$;SAMTOOLS_BIN$;=/opt/packages/samtools/bin
-$;SAMTOOLS_EXEC$;=/opt/packages/samtools/bin/samtools
+$;BEDTOOLS_BIN$;=/usr/bin/bedtools
+$;SAMTOOLS_BIN$;=/usr/bin/
+$;SAMTOOLS_EXEC$;=/usr/bin/samtools
 $;R_EXEC$;=/usr/bin/R
 
-[component align_bowtie_stats]
-
-[component align_hisat2_stats]
-
-[component align_hisat2_split_stats]
-
-[component align_tophat_stats]
-
-[component align_tophat_split_stats]
-
 [component bam2bigwig]
-$;UCSC_UTIL$; = /usr/local/packages/ucsc_utils
-$;BEDTOOLS_BIN$; = /usr/local/bin
-
-[component bam_merge]
+$;UCSC_UTIL$; = /usr/local/bin/kentUtils
 
 [component bowtie]
-$;BOWTIE_EXEC$;=/usr/local/bin/bowtie/
-$;BOWTIE_BIN$;=/usr/local/bin/
+$;BOWTIE_EXEC$;=/usr/bin/bowtie/
+$;BOWTIE_BIN$;=/usr/bin/
 
 [component bowtie_build]
-$;BOWTIE_BUILD_EXEC$;=/usr/local/bin/bowtie-build
-$;BOWTIE_BUILD_BIN$;=/usr/local/bin
-
-[component create_cuffsuite_files]
-
-[component create_paired_list_file]
+$;BOWTIE_BUILD_EXEC$;=/usr/bin/bowtie-build
+$;BOWTIE_BUILD_BIN$;=/usr/bin
 
 [component cuffcompare]
-$;CUFFCOMPARE_EXEC$;=/usr/local/bin/cuffcompare
-$;CUFFCOMPARE_BIN$;=/usr/local/bin
+$;CUFFCOMPARE_EXEC$;=/opt/packages/cufflinks/cuffcompare
+$;CUFFCOMPARE_BIN$;=/opt/packages/cufflinks
 
 [component cuffdiff]
-$;CUFFDIFF_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffdiff
-$;CUFFDIFF_BIN$;=/usr/local/packages/cufflinks-2.2.1/bin
-
-[component cuffdiff_filter]
+$;CUFFDIFF_EXEC$;=/opt/packages/cufflinkscuffdiff
+$;CUFFDIFF_BIN$;=/opt/packages/cufflinks
 
 [component cufflinks]
-$;CUFFLINKS_EXEC$;=/usr/local/bin/cufflinks
-$;CUFFLINKS_BIN$;=/usr/local/bin
+$;CUFFLINKS_EXEC$;=/opt/packages/cufflinks/cufflinks
+$;CUFFLINKS_BIN$;=/opt/packages/cufflinks
 
 [component cuffmerge]
-$;CUFFMERGE_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffmerge
-$;CUFFMERGE_BIN$;=//usr/local/packages/cufflinks-2.2.1/bin
+$;CUFFMERGE_EXEC$;=/opt/packages/cufflinks/cuffmerge
+$;CUFFMERGE_BIN$;=/opt/packages/cufflinks
 
 [component cuffnorm]
-$;CUFFNORM_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffnorm
-$;CUFFNORM_BIN$;=/usr/local/packages/cufflinks-2.2.1/bin
+$;CUFFNORM_EXEC$;=/opt/packages/cufflinks/cuffnorm
+$;CUFFNORM_BIN$;=/opt/packages/cufflinks
 
 [component cuffquant]
-$;CUFFQUANT_EXEC$;=/usr/local/packages/cufflinks-2.2.1/bin/cuffquant
-$;CUFFQUANT_BIN$;=/usr/local/packages/cufflinks-2.2.1/bin
+$;CUFFQUANT_EXEC$;=/opt/packages/cufflinks/cuffquant
+$;CUFFQUANT_BIN$;=/opt/packages/cufflinks
 
 [component cummerbund]
-$;R_BIN$;=/usr/local/packages/R-2.15.2/bin
+$;R_BIN$;=/usr/bin/R
 $;R_SCRIPT_PATH$;=
 
 [component deseq]
-$;R_BIN$;=/usr/local/packages/R-2.15.2/bin
+$;R_BIN$;=/usr/bin/R
 $;R_SCRIPT_PATH$;=
 
 [component edgeR]
-$;R_BIN$;=/usr/local/packages/R-2.14.1/bin
+$;R_BIN$;=/usr/bin/R
 $;R_SCRIPT_PATH$;=
 
 [component expression_plots]
-$;R_BIN$;=/usr/local/packages/R-2.15.2/bin
+$;R_BIN$;=/usr/bin/R
 $;R_SCRIPT_PATH$;=
 
 [component fastqc_stats]
-$;FASTQC_BIN$;=/usr/local/bin
+$;FASTQC_BIN$;=/usr/bin
 
 [component fastx_quality_stats]
-$;FASTX_EXEC$;=/usr/local/bin/fastx_quality_stats
-$;FASTX_BIN$;=/usr/local/bin
+$;FASTX_EXEC$;=/usr/bin/fastx_quality_stats
+$;FASTX_BIN$;=/usr/bin
 
 [component fastx_trimming]
-$;FASTX_EXEC$;=/usr/local/bin/fastx_trimmer
-$;FASTX_BIN$;=/usr/local/bin
-
-[component filter_deseq]
-
-[component filter_edgeR]
+$;FASTX_EXEC$;=/usr/bin/fastx_trimmer
+$;FASTX_BIN$;=/usr/bin
 
 [component hisat2]
 $;HISAT2_BIN$;=/usr/local/packages/hisat2-2.0.4
@@ -106,23 +84,8 @@ $;HISAT2_BUILD_BIN$;=/usr/local/packages/hisat2-2.0.4
 $;PYTHON_BIN$;=
 $;PYTHON_LIB$;=
 
-[component percent_mapped_stats]
-$;BEDTOOLS_BIN$;=/usr/local/bin
-
-[component rpkm_coverage_stats]
-$;BEDTOOLS_BIN$;=/usr/local/bin
-
-[component samtools_alignment_stats]
-
-[component samtools_file_convert]
-
-[component samtools_reference_index]
-
-[component split_fastq]
-
 [component tophat]
-$;TOPHAT_EXEC$;=/usr/local/bin/tophat
-
-[component tophat_split]
-
-[component wrapper_align]
+$;TOPHAT_EXEC$;=/usr/bin/tophat
+$;TOPHAT_BIN$;=/usr/bin
+$;BOWTIE_EXEC$;=/usr/bin/bowtie
+$;BOWTIE_BIN$;=/usr/bin
