fixing error in tophat_legacy option

--- a/package-rnaseq/software.config
+++ b/package-rnaseq/software.config
@@ -86,6 +86,6 @@ $;PYTHON_LIB$;=
 
 [component tophat]
 $;TOPHAT_EXEC$;=/usr/bin/tophat
-$;TOPHAT_BIN_DIR$;=/usr/bin
+$;TOPHAT_BIN$;=/usr/bin
 $;BOWTIE_EXEC$;=/usr/bin/bowtie
-$;BOWTIE_BIN_DIR$;=/usr/bin
+$;BOWTIE_BIN$;=/usr/bin
