adding new param to input.config to make replace_config_keys not fail

--- a/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/input.config
+++ b/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/input.config
@@ -185,3 +185,7 @@ $;OTHER_PARAMETERS$; =
 $;OTHER_ARGS$; = --v
 ;;Java Memory
 $;Java_Memory$; = -Xmx10g
+
+[component]
+;; This is here to make replace_config_keys.pl not error out.
+$;COMPONENT_CONFIG$;=
