--- a/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/input.config
+++ b/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/input.config
@@ -5,12 +5,14 @@ $;REF_FILE$; =
 $;MAX_READS$; =
 ;; Validation Stringency
 $;STRINGENCY$; =
+;; Prefix to use in naming
+$;PREFIX$; = SNP
 
 [extract_chromosomes]
 ;;Input BAM file
 $;INPUT_FILE$; = 
 ;; Output Prefix
-$;Prefix$; = 
+$;Prefix$; = $;PREFIX$;
 
 [haplotype_caller]
 ;;Input BAM file
@@ -24,7 +26,9 @@ $;STAND_CALL_CONF$; =
 ;; Don't use soft-clipped bases
 $;NO_SOFT_CLIPPED_BASES$; = 
 ;; Output Prefix
-$;Prefix$; = 
+$;Prefix$; = $;PREFIX$;
+;;Java Memory
+$;Java_Memory$; = -Xms8g
 
 [picard_processing]
 ;;Input BAM file
@@ -44,7 +48,7 @@ $;MAX_READS_STORED$; = $;MAX_READS$;
 ;; Validation Stringency - Choose from SILENT, LENIENT, or STRICT
 $;VALIDATION_STRINGENCY$; = $;STRINGENCY$;
 ;; Output Prefix
-$;Prefix$; = 
+$;Prefix$; = $;PREFIX$;
 
 [preprocess_alignment]
 ;;Input BAM file
@@ -56,7 +60,7 @@ $;MAX_READS_STORED$; = $;MAX_READS$;
 ;; Validation Stringency - Choose from SILENT, LENIENT, or STRICT
 $;VALIDATION_STRINGENCY$; = $;STRINGENCY$;
 ;; Output Prefix
-$;Prefix$; = 
+$;Prefix$; = $;PREFIX$;
 
 [annovar]
 ;;Input BAM file
@@ -78,7 +82,7 @@ $;VCFINPUT$; = 1
 ;; String of other misc arguments to pass to table_annovar.pl
 $;OTHER_ARGS$; = 
 ;; Output Prefix
-$;Prefix$; = 
+$;Prefix$; = $;PREFIX$;
 
 [split_spliced_reads]
 ;;Input BAM file
@@ -96,7 +100,9 @@ $;UNSAFE$; = ALLOW_N_CIGAR_READS
 ;; String of other misc opts to pass into GATK
 $;OTHER_OPTS$; = 
 ;; Output Prefix
-$;Prefix$; = 
+$;Prefix$; = $;PREFIX$;
+;;Java Memory
+$;Java_Memory$; = -Xms8g
 
 [variant_filtration]
 ;;Input BAM file
@@ -114,7 +120,9 @@ $;STAND_CALL_CONF$; =
 ;; String of other misc opts to pass into GATK
 $;OTHER_OPTS$; = 
 ;; Output Prefix
-$;Prefix$; = 
+$;Prefix$; = $;PREFIX$;
+;;Java Memory
+$;Java_Memory$; = -Xms8g
 
 [realigner_target_creator]
 ;;Path to GATK binary directory
@@ -124,7 +132,7 @@ $;Reference$; = $;REF_FILE$;
 ;;Input Bam file
 $;Infile$; = 
 ;;Output Prefix
-$;Prefix$; = 
+$;Prefix$; = $;PREFIX$;
 ;;additional Realigner Target Creator parameters
 $;OTHER_PARAMETERS$; = 
 ;;use --v for verbose summary
@@ -142,7 +150,7 @@ $;Infile$; =
 ;;Target Intervals from Realigner target creator
 $;TargetInterval$; = 
 ;;Output Prefix
-$;Prefix$; = 
+$;Prefix$; = $;PREFIX$;
 ;;additional Indel Realigner parameters
 $;OTHER_PARAMETERS$; = 
 ;;use --v for verbose summary
@@ -158,7 +166,7 @@ $;Reference$; = $;REF_FILE$;
 ;;Input Bam file
 $;Infile$; = 
 ;;Output Prefix
-$;Prefix$; = 
+$;Prefix$; = $;PREFIX$;
 ;;Known sites
 $;KnownSites$; = 
 ;;additional Base Recalibration parameters
@@ -176,7 +184,7 @@ $;Reference$; = $;REF_FILE$;
 ;;Input Bam file
 $;INPUT_FILE$; = 
 ;;Output Prefix
-$;Prefix$; = 
+$;Prefix$; = $;PREFIX$;
 ;;additional Print Reads parameters
 ;;Base Recalibration table file
 $;BQSR$; =
