adding java mem options to picard scripts

--- a/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/input.config
+++ b/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/input.config
@@ -49,6 +49,8 @@ $;MAX_READS_STORED$; = $;MAX_READS$;
 $;VALIDATION_STRINGENCY$; = $;STRINGENCY$;
 ;; Output Prefix
 $;Prefix$; = $;PREFIX$;
+;;Java Memory
+$;Java_Memory$; = -Xmx5g
 
 [preprocess_alignment]
 ;;Input BAM file
@@ -61,6 +63,8 @@ $;MAX_READS_STORED$; = $;MAX_READS$;
 $;VALIDATION_STRINGENCY$; = $;STRINGENCY$;
 ;; Output Prefix
 $;Prefix$; = $;PREFIX$;
+;;Java Memory
+$;Java_Memory$; = -Xmx5g
 
 [annovar]
 ;;Input BAM file
