adding helpful comment on entries that don't need to be filled by user

--- a/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/input.config
+++ b/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/input.config
@@ -9,13 +9,13 @@ $;STRINGENCY$; =
 $;PREFIX$; = SNP
 
 [extract_chromosomes]
-;;Input BAM file
+;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
 ;; Output Prefix
 $;Prefix$; = $;PREFIX$;
 
 [haplotype_caller]
-;;Input BAM file
+;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
 ;; Reference File
 $;REFERENCE_FILE$; = $;REF_FILE$; 
@@ -31,7 +31,7 @@ $;Prefix$; = $;PREFIX$;
 $;Java_Memory$; = -Xms8g
 
 [picard_processing]
-;;Input BAM file
+;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
 ;; Read Group ID
 $;ID$; = 
@@ -53,7 +53,7 @@ $;Prefix$; = $;PREFIX$;
 $;Java_Memory$; = -Xmx5g
 
 [preprocess_alignment]
-;;Input BAM file
+;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
 ;;Reference 
 $;REFERENCE$; = $;REF_FILE$;
@@ -67,7 +67,7 @@ $;Prefix$; = $;PREFIX$;
 $;Java_Memory$; = -Xmx5g
 
 [annovar]
-;;Input BAM file
+;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; =
 ;; Path to database
 $;DB_PATH$; =
@@ -89,7 +89,7 @@ $;OTHER_ARGS$; =
 $;Prefix$; = $;PREFIX$;
 
 [split_spliced_reads]
-;;Input BAM file
+;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
 ;;Reference 
 $;REFERENCE$; = $;REF_FILE$;
@@ -109,7 +109,7 @@ $;Prefix$; = $;PREFIX$;
 $;Java_Memory$; = -Xms8g
 
 [variant_filtration]
-;;Input BAM file
+;;Input BAM file. Will be filled in by the script.
 $;INPUT_FILE$; = 
 ;;Reference 
 $;REFERENCE$; = 
@@ -133,7 +133,7 @@ $;Java_Memory$; = -Xms8g
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1
 ;;Reference 
 $;Reference$; = $;REF_FILE$;
-;;Input Bam file
+;;Input Bam file. Will be filled in by the script.
 $;Infile$; = 
 ;;Output Prefix
 $;Prefix$; = $;PREFIX$;
@@ -149,9 +149,9 @@ $;Java_Memory$; = -Xmx5g
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
 ;;Reference 
 $;Reference$; = $;REF_FILE$;
-;;Input Bam file
+;;Input Bam file. Will be filled in by the script.
 $;Infile$; = 
-;;Target Intervals from Realigner target creator
+;;Target Intervals from Realigner target creator. Will be filled in by the script.
 $;TargetInterval$; = 
 ;;Output Prefix
 $;Prefix$; = $;PREFIX$;
@@ -167,7 +167,7 @@ $;Java_Memory$; = -Xmx5g
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
 ;;Reference 
 $;Reference$; = $;REF_FILE$;
-;;Input Bam file
+;;Input Bam file. Will be filled in by the script.
 $;Infile$; = 
 ;;Output Prefix
 $;Prefix$; = $;PREFIX$;
@@ -185,12 +185,12 @@ $;Java_Memory$; = -Xms8g
 $;GATK_BIN$; = /usr/local/packages/GenomeAnalysisTK-3.1.1/
 ;;Reference 
 $;Reference$; = $;REF_FILE$;
-;;Input Bam file
+;;Input Bam file. Will be filled in by the script.
 $;INPUT_FILE$; = 
 ;;Output Prefix
 $;Prefix$; = $;PREFIX$;
 ;;additional Print Reads parameters
-;;Base Recalibration table file
+;;Base Recalibration table file. Will be filled in by the script.
 $;BQSR$; =
 $;OTHER_PARAMETERS$; = 
 ;;use --v for verbose summary
