fixing memory requirements

--- a/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/picard_processing.process.config
+++ b/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/picard_processing.process.config
@@ -22,17 +22,6 @@ $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/
 ;; list of print_reads config files
 $;OUTPUT_CONFIG$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.configs.list
 
-[dce]
-;; These configuration options only apply to any distributed components 
-$;GROUP$;=
-$;OS$;=
-$;MEMORY$;=16000
-$;HOSTS$;=
-$;QUEUE$;=
-$;DURATION$;=
-$;PRIORITY$;=
-$;PASSTHROUGH$;=
-
 [component]
 $;COMPONENT_NAME$; = picard_processing
 $;DESCRIPTION$; =  Run various Picard utilities that process post-sorted BAM files
@@ -55,3 +44,15 @@ $;PIPELINEID$; =
 
 [include]
 $;PROJECT_CONFIG$; = 
+
+[dce]
+;; These configuration options only apply to any distributed components 
+$;GROUP$;=
+$;OS$;=
+$;MEMORY$;=
+$;HOSTS$;=
+$;QUEUE$;=
+$;DURATION$;=
+$;PRIORITY$;=
+$;PASSTHROUGH$;= -l mem_free=16G
+
