--- a/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/base_recalibration.base_recal.config
+++ b/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/base_recalibration.base_recal.config
@@ -25,17 +25,6 @@ $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/
 ;; list of base_recalibration config files
 $;OUTPUT_CONFIG$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.configs.list
 
-[dce]
-;; These configuration options only apply to any distributed components 
-$;GROUP$;=
-$;OS$;=
-$;MEMORY$;=50000
-$;HOSTS$;=
-$;QUEUE$;=threaded.q
-$;DURATION$;=
-$;PRIORITY$;=
-$;PASSTHROUGH$;=-pe thread 20
-
 [component]
 $;COMPONENT_NAME$; = base_recalibration
 $;DESCRIPTION$; =  Run GATK's Base Recalibrator
@@ -58,3 +47,15 @@ $;PIPELINEID$; =
 
 [include]
 $;PROJECT_CONFIG$; = 
+
+[dce]
+;; These configuration options only apply to any distributed components 
+$;GROUP$;=
+$;OS$;=
+$;MEMORY$;=
+$;HOSTS$;=
+$;QUEUE$;=threaded.q
+$;DURATION$;=
+$;PRIORITY$;=
+$;PASSTHROUGH$;=-l mem_free=15G -pe thread 8
+
