--- a/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/indel_realigner.indel_realign.config
+++ b/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/indel_realigner.indel_realign.config
@@ -25,17 +25,6 @@ $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/
 ;; list of indel_realigner config files
 $;OUTPUT_CONFIG$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.configs.list
 
-[dce]
-;; These configuration options only apply to any distributed components 
-$;GROUP$;=
-$;OS$;=
-$;MEMORY$;=4000
-$;HOSTS$;=bellatrix
-$;QUEUE$;=test.q
-$;DURATION$;=
-$;PRIORITY$;=
-$;PASSTHROUGH$;=
-
 [component]
 $;COMPONENT_NAME$; = indel_realigner
 $;DESCRIPTION$; =  Run GATK's Indel Realigner
@@ -58,3 +47,15 @@ $;PIPELINEID$; =
 
 [include]
 $;PROJECT_CONFIG$; = 
+
+[dce]
+;; These configuration options only apply to any distributed components 
+$;GROUP$;=
+$;OS$;=
+$;MEMORY$;=
+$;HOSTS$;=
+$;QUEUE$;=
+$;DURATION$;=
+$;PRIORITY$;=
+$;PASSTHROUGH$;= -l mem_free=4G
+
