--- a/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/print_reads.printreads.config
+++ b/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/print_reads.printreads.config
@@ -25,17 +25,6 @@ $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/
 ;; list of print_reads config files
 $;OUTPUT_CONFIG$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.configs.list
 
-[dce]
-;; These configuration options only apply to any distributed components 
-$;GROUP$;=
-$;OS$;=
-$;MEMORY$;=16000
-$;HOSTS$;=
-$;QUEUE$;=
-$;DURATION$;=
-$;PRIORITY$;=
-$;PASSTHROUGH$;=
-
 [component]
 $;COMPONENT_NAME$; = print_reads
 $;DESCRIPTION$; =  Run GATK's Print Reads
@@ -58,3 +47,15 @@ $;PIPELINEID$; =
 
 [include]
 $;PROJECT_CONFIG$; = 
+
+[dce]
+;; These configuration options only apply to any distributed components 
+$;GROUP$;=
+$;OS$;=
+$;MEMORY$;=
+$;HOSTS$;=
+$;QUEUE$;=
+$;DURATION$;=
+$;PRIORITY$;=
+$;PASSTHROUGH$;= -l mem_free=16G
+
