put config input in wrong location

--- a/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/pipeline.config
+++ b/package-arbor/pipeline_templates/RNASeq_SNP_Pipeline/pipeline.config
@@ -44,9 +44,9 @@ $;OTHER_ARGS$; = --v
 
 [base_recalibration base_recal]
 ;; path to  config file
-$;INPUT_FILE$; = $;REPOSITORY_ROOT$;/output_repository/indel_realigner/$;PIPELINEID$;_indel_realign/indel_realigner.configs.list
+$;INPUT_FILE$; = 
 ;; path to list of  config files
-$;INPUT_FILE_LIST$; = 
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/indel_realigner/$;PIPELINEID$;_indel_realign/indel_realigner.configs.list
 ;; path to temporary directory
 $;TEMP_DIR$; = $;TMP_DIR$;
 ;; use --v for verbose summary
