--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/split_multifasta.fasta_d.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/split_multifasta.fasta_d.config
@@ -13,12 +13,12 @@ $;COMPRESS_OUTPUT$;=0
 [input]
 $;INPUT_FILE_LIST$;=
 $;INPUT_FILE$;=
-$;INPUT_DIRECTORY$;=$;REPOSITORY_ROOT$;/output_repository/sam2fasta//$;PIPELINEID$;_fasta/
+$;INPUT_DIRECTORY$;=$;REPOSITORY_ROOT$;/output_repository/sam2fasta//$;PIPELINEID$;_fasta_d/
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$;=fasta
 
 [output]
-$;OUTPUT_TOKEN$;=fasta
+$;OUTPUT_TOKEN$;=fasta_d
 $;OUTPUT_DIRECTORY$;=$;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;OUTPUT_LIST$;=$;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.fsa.list
 
