--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blast2lca.lgt_r.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blast2lca.lgt_r.config
@@ -20,14 +20,14 @@ $;BEST_BLAST_HIT$;=1
 
 [input]
 ;; List of filtered blast m8 files.
-$;INPUT_FILE_LIST$; =$;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt/filtered_m8.list
+$;INPUT_FILE_LIST$; =$;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt_r/filtered_m8.list
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; = raw
 
 [output]
-$;OUTPUT_TOKEN$; = lgt
+$;OUTPUT_TOKEN$; = lgt_r
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lca.list
 
