--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/sam2fasta.fasta_d.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/sam2fasta.fasta_d.config
@@ -24,7 +24,7 @@ $;INPUT_FILE$; =$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPE
 [output]
 ;; Name of the output file. Clear this parameter and set HLGT to 1 to get 1 file per run.
 $;OUTPUT_FILE$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/sam2fasta.fasta
-$;OUTPUT_TOKEN$; = fasta
+$;OUTPUT_TOKEN$; = fasta_d
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;OUTPUT_BASES$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/sam2fasta.base.list
 $;OUTPUT_LIST$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/sam2fasta.out.list
